<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp"
    >


    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/profile_image"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:src="@drawable/m"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hello"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toTopOf="@id/role"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        />
    <TextView

        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="my role is"
        android:layout_marginStart="12dp"
        android:textColor="#22C7B8"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"/>
    <ImageView
        android:layout_width="15dp"
        android:clickable="true"
        android:id="@+id/noti"
        android:layout_height="20dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/icon_notification"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <LinearLayout

        android:clickable="true"
        android:focusable="true"
        android:id="@+id/callContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/container_blue"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/g1"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_case_add"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cases"
            style="@style/txt_home_icon_style"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calls_number"
            style="@style/txt_sub_home_style"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/container_purple"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/callContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/g1"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_report"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report"
            style="@style/txt_home_icon_style"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_number"
            style="@style/txt_sub_home_style"
            />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/task_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:background="@drawable/container_green"
        app:layout_constraintStart_toEndOf="@id/g2"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_tasks_home"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task"
            style="@style/txt_home_icon_style"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks_number"
            style="@style/txt_sub_home_style"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_attendence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_container"
        android:background="@drawable/container_cyan"
        app:layout_constraintStart_toEndOf="@id/g2"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_attendence_home"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="attendance - leaving"
            style="@style/txt_home_icon_style"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_cases"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/container_brown_wide"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/container_attendence"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/container_report"
        app:layout_constraintTop_toBottomOf="@+id/container_attendence">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_empolyee_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Employee"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>